Bug 425693 - KUP Backup cant be loaded
Summary: KUP Backup cant be loaded
Status: RESOLVED FIXED
Alias: None
Product: kup
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Persson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-23 00:39 UTC by Condor
Modified: 2020-08-23 14:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Condor 2020-08-23 00:39:59 UTC
SUMMARY
The backup created by KUP can not be accessed, if from kup-filedigger "open" is selected then dolphin gives the error "No bup repository found. bup:///kup/<date time>/<backuped up folder>""
This stops the backups from being used or accessed at all.

STEPS TO REPRODUCE
1. Use kup-filedigger in a kup backup
2. Select "open" on a folder

OBSERVED RESULT
Dolphin opens and gets the error "No bup repository found. bup:///kup/<date time>/<backuped up folder>".

EXPECTED RESULT
The backuped folder to be openned.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 18.04
KDE Plasma Version: 5.12.9
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5

ADDITIONAL INFORMATION
Comment 1 Simon Persson 2020-08-23 12:44:04 UTC
Git commit 6b8e770584f6f6674f17a41b3424191e47e73dbc by Simon Persson.
Committed on 23/08/2020 at 12:42.
Pushed by persson into branch 'master'.

Better handling of relative path argument to filedigger

If you gave a relative path to bup repo as command line argument for
kup-filedigger then it would work OK until you tried to open a file or
folder with external program. Solve problem by making sure repo path is
absolute, first thing.

M  +3    -1    filedigger/main.cpp

https://invent.kde.org/system/kup/commit/6b8e770584f6f6674f17a41b3424191e47e73dbc
Comment 2 Simon Persson 2020-08-23 12:47:30 UTC
Thank you for reporting! Took a bit of trying to reproduce but I did figure out that giving a relative path as command line argument would cause what you reported. Easiest work-around for now would be for users to open kup-filedigger either from sys tray applet or from command line without any path argument (gives you a folder selector).
Comment 3 Condor 2020-08-23 12:53:08 UTC
Sorry about the lack of info for reproducing, there wasnt a lot i could say sadly.
How do i open filedigger without a path argument? if this is attempted it says that a path argument is required.
Do i not have something installed?
Comment 4 Simon Persson 2020-08-23 14:23:02 UTC
Ah, if you are using an older version then yes, a path argument is required. So, you can give an absolute path instead there.