Better handling of relative path argument to filedigger

If you gave a relative path to bup repo as command line argument for
kup-filedigger then it would work OK until you tried to open a file or
folder with external program. Solve problem by making sure repo path is
absolute, first thing.

BUG: 425693